# rock

./: README.md
rock_arduino/: LSM9DS1.cpp  ble.ino  control.ino  data.ino  flightStates.ino  groundStates.ino  led.ino  profile.h  rock_arduino.ino  sensors.ino  servo.ino  states.h  states.ino
rock_mobile/: pubspec.yaml
rock_mobile/android/app/: build.gradle
rock_mobile/android/app/src/main/: AndroidManifest.xml
rock_mobile/ios/Runner.xcodeproj/: project.pbxproj
rock_mobile/lib/: ground_states.dart  home.dart  landed_state.dart  main.dart  state.dart
rock_mobile/linux/: CMakeLists.txt
rock_mobile/macos/Runner.xcodeproj/: project.pbxproj
rock_mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rock_mobile/macos/Runner/Configs/: AppInfo.xcconfig
rock_mobile/web/: index.html
rock_mobile/windows/: CMakeLists.txt
rock_mobile/windows/runner/: Runner.rc
rock_pcb/: BOM_RockV2_2024-02-25.csv
rock_predict/: AeroTech_E18W.csv  AeroTech_E28T.csv  AeroTech_F35W.csv  AeroTech_F39T.csv  AeroTech_F51NT.csv  AeroTech_F52C.csv  AeroTech_F67W.csv  AeroTech_G80T.csv  data.py  flight.csv  main.py  thrust.py
rock_transfer/: .gitignore  Cargo.toml  a.csv  flight.csv
rock_transfer/src/: main.rs
