[package]
name = "rock_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
csv = "1.2.2"
indicatif = "0.17.6"
robust-arduino-serial = "0.1.1"
serde = { version = "1.0.180", features = ["derive"] }
serial = "0.4.0"
